--- a/MinimalBookApi/appsettings.Development.json
+++ b/MinimalBookApi/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=test;User Id=admin;Password=admin;"
   }
+
 }
+  
+
