--- a/MinimalBookApi/appsettings.json
+++ b/MinimalBookApi/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=test;User Id=admin;Password=admin;"
-  }
+  "AllowedHosts": "*"
 }
