--- a/.github/workflows/master_booktest1234.yml
+++ b/.github/workflows/master_booktest1234.yml
@@ -46,7 +46,10 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: .net-app
-
+      - name: Run EF Core Migrations
+        run: dotnet ef database update --project MinimalBookApi --configuration Release
+        env:
+          ConnectionStrings__DefaultConnection: ${{ secrets.AZURE_POSTGRES_CONNECTION }}
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
