--- a/.github/workflows/master_booktest1234.yml
+++ b/.github/workflows/master_booktest1234.yml
@@ -47,15 +47,14 @@ jobs:
         with:
           name: .net-app
 
-
-      - name: Install EF Core CLI
-        run: dotnet tool install --global dotnet-ef
-
-      - name: Run EF Core Migrations
-        run: dotnet ef database update --project MinimalBookApi/MinimalBookApi.csproj
+      - name: Update database
+        run: |
+          dotnet tool install --global dotnet-ef
+          dotnet tool restore
+          dotnet ef database update --project MinimalBookApi/MinimalBookApi.csproj
         env:
+          ASPNETCORE_ENVIRONMENT: Production
           ConnectionStrings__DefaultConnection: ${{ secrets.AZURE_POSTGRES_CONNECTION }}
-
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
