--- a/MinimalBookApi/appsettings.Development.json
+++ b/MinimalBookApi/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=test;User Id=admin;Password=admin;"
+    "DefaultConnection": "Server=playswap-db.postgres.database.azure.com;Port=5432;Database=books;User Id=playswap;Password=Gigaset4015;"
   }
 
 }
