--- a/.github/workflows/master_booktest1234.yml
+++ b/.github/workflows/master_booktest1234.yml
@@ -28,11 +28,11 @@ jobs:
       - name: Build with dotnet
         run: |
           dotnet build --configuration Release
+          echo ${{ConnectionStrings__DefaultConnection}}
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
           
-
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
