--- a/MinimalBookApi/appsettings.Production.json
+++ b/MinimalBookApi/appsettings.Production.json
@@ -4,6 +4,9 @@
         "Default": "Information",
         "Microsoft.AspNetCore": "Warning"
       }
+    },
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=playswap-db.postgres.database.azure.com;Port=5432;Database=books;User Id=playswap;Password=Gigaset4015;"
     }
   }
     
