--- a/.github/workflows/master_booktest1234.yml
+++ b/.github/workflows/master_booktest1234.yml
@@ -29,7 +29,7 @@ jobs:
           dotnet build --configuration Release
           echo ${{env.ConnectionStrings__DefaultConnection}}
         env:
-          ConnectionStrings__DefaultConnection: 'Server=playswap-db.postgres.database.azure.com;Port=5432;Database=books;User Id=playswap;Password=Gigaset4015;'
+          ConnectionStrings__DefaultConnection: """Server=playswap-db.postgres.database.azure.com;Port=5432;Database=books;User Id=playswap;Password=Gigaset4015;"""
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
