--- a/MinimalBookApi/appsettings.Production.json
+++ b/MinimalBookApi/appsettings.Production.json
@@ -6,7 +6,7 @@
       }
     },
     "ConnectionStrings": {
-      "DefaultConnection": ""
+      "DefaultConnection": "Server=playswap-db.postgres.database.azure.com;Port=5432;Database=books;User Id=playswap;Password=Gigaset4015;"
     }
   }
     
