--- a/.github/workflows/master_booktest1234.yml
+++ b/.github/workflows/master_booktest1234.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       ASPNETCORE_ENVIRONMENT: Production
-      CONNECTIONSTRINGS__DEFAULTCONNECTION: "Server=playswap-db.postgres.database.azure.com;Port=5432;Database=books;User Id=playswap;Password=Gigaset4015;"
+      ConnectionStrings_DefaultConnection: "Server=playswap-db.postgres.database.azure.com;Port=5432;Database=books;User Id=playswap;Password=admin;"
 
     steps:
       - uses: actions/checkout@v4
@@ -42,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       ASPNETCORE_ENVIRONMENT: Production
-      CONNECTIONSTRINGS__DEFAULTCONNECTION: "Server=playswap-db.postgres.database.azure.com;Port=5432;Database=books;User Id=playswap;Password=Gigaset4015;"
+      ConnectionStrings_DefaultConnection: "Server=playswap-db.postgres.database.azure.com;Port=5432;Database=books;User Id=playswap;Password=admin;"
     needs: build
     environment:
       name: 'Production'
