--- a/MinimalBookApi/appsettings.Development.json
+++ b/MinimalBookApi/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=localhost;Port=5432;Database=test;User Id=admin;Password=admin;"
   }
 
 }
