--- a/.github/workflows/master_booktest1234.yml
+++ b/.github/workflows/master_booktest1234.yml
@@ -27,13 +27,13 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-      - name: Update database
-        run: |
-          dotnet tool install --global dotnet-ef
-          dotnet tool restore
-          dotnet ef database update -c DataContext -p MimimalBookApi
-        env:
-          ASPNETCORE_ENVIRONMENT: Development
+      #- name: Update database
+      #  run: |
+      #    dotnet tool install --global dotnet-ef
+      #    dotnet tool restore
+      #    dotnet ef database update -c DataContext -p MimimalBookApi
+      #  env:
+      #    ASPNETCORE_ENVIRONMENT: Development
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
